src/snapshots/changesette__package_json__tests__leaves_nested_version_keys_untouched.snap
---
source: src/package_json.rs
expression: "rewrite(\"scripts-version-key\")"
---
{
  "name": "ublacklist",
  "version": "10.1.0",
  "scripts": {
    "version": "echo version",
    "postversion": "git push"
  },
  "config": {
    "version": "not-touched"
  }
}
