src/snapshots/changesette__package_json__tests__rejects_a_missing_name.snap
---
source: src/package_json.rs
expression: "load_err(\"name-missing\")"
---
package.json: missing top-level "name"
