src/snapshots/changesette__package_json__tests__rejects_a_missing_package_json.snap
---
source: src/package_json.rs
expression: "load_err(\"no-package-json\")"
---
tests/fixtures/package-json/no-package-json/package.json not found
