src/snapshots/changesette__package_json__tests__rejects_a_missing_version.snap
---
source: src/package_json.rs
expression: "load_err(\"version-missing\")"
---
package.json: missing top-level "version"
