src/snapshots/changesette__package_json__tests__rejects_a_non_boolean_private.snap
---
source: src/package_json.rs
expression: "load_err(\"private-not-boolean\")"
---
tests/fixtures/package-json/private-not-boolean/package.json: top-level "private" must be a boolean
