src/snapshots/changesette__package_json__tests__rejects_a_non_string_version.snap
---
source: src/package_json.rs
expression: "load_err(\"version-not-string\")"
---
tests/fixtures/package-json/version-not-string/package.json: top-level "version" must be a string
