src/snapshots/changesette__package_json__tests__rejects_an_invalid_semver_version.snap
---
source: src/package_json.rs
expression: "load_err(\"version-invalid-semver\")"
---
tests/fixtures/package-json/version-invalid-semver/package.json: top-level "version" ("10.0") is not a valid semver version: unexpected end of input while parsing minor version number
