src/snapshots/changesette__package_json__tests__rejects_set_version_without_a_version_key.snap
---
source: src/package_json.rs
expression: "format!(\"{err:#}\")"
---
tests/fixtures/package-json/version-missing/package.json: missing top-level "version"
