src/snapshots/changesette__package_json__tests__rewrites_a_four_space_indented_file_without_a_final_newline.snap
---
source: src/package_json.rs
expression: rewritten
---
{
    "name": "ublacklist",
    "version": "10.1.0",
    "private": true
}
