src/snapshots/changesette__package_json__tests__rewrites_a_tab_indented_file.snap
---
source: src/package_json.rs
expression: "rewrite(\"tabs\")"
---
{
	"name": "ublacklist",
	"version": "10.1.0",
	"private": true
}
