src/snapshots/changesette__package_json__tests__rewrites_a_two_space_indented_file.snap
---
source: src/package_json.rs
expression: "rewrite(\"two-space\")"
---
{
  "name": "ublacklist",
  "version": "10.1.0",
  "private": true,
  "scripts": {
    "build": "vite build"
  }
}
